--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
     <script src="lib/requirejs/require.js" data-main="js/index"></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <div class="header"></div>
-    <div class="main">123132</div>
+    <div class="main">12313222</div>
     <div class="footer"></div>
 </body>
 </html>
