第三次上传版本

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,26 @@
 </head>
 <body>
     <div class="header"></div>
-    <div class="main">12313222</div>
+    <div class="main">
+    	<div class="banner">
+    		<div class="top">
+    			<div class="box">
+    				<ul>
+    					<li>全部分类</li>
+    					<li><a href="#">精选专题</a></li>
+    					<li><a href="#">每日上新</a></li>
+    				</ul>
+    			</div>
+    		</div>
+    		<div class="connt">
+    			<div class="left">
+    				<ul>
+    					<li>男装/女装</li>
+    				</ul>
+    			</div>
+    		</div>
+    	</div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
