令人崩溃的版本

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,76 @@
     		<div class="connt">
     			<div class="left">
     				<ul>
-    					<li>男装/女装</li>
+    					<li>
+    						<a href="#">男装</a> <span>/</span> <a href="#">女装</a>
+    						<!-- <div class="box">
+    							<ul>
+    								<span>男士外套</span>
+    								<span>&gt;</span>
+    								<li>羽绒/棉服</li>
+    								<li>风衣/大衣</li>
+    								<li>皮衣/夹克</li>
+    							</ul>
+    						</div> -->
+    					</li>
+    					<li><a href="#">眼镜</a> <span>/</span> <a href="#">配饰</a> <span>/</span> <a href="#">数码</a></li>
+    					<li><a href="#">鞋靴</a> <span>/</span> <a href="#">运动</a></li>
+    					<li><a href="#">皮具</a> <span>/</span> <a href="#">出行</a></li>
+    					<li><a href="#">居家</a> <span>/</span> <a href="#">婴童</a></li>
+    					<li><a href="#">美妆</a> <span>/</span> <a href="#">个护</a></li>
+    					<li><a href="#">厨具</a> <span>/</span> <a href="#">家电</a> <span>/</span> <a href="#">汽配</a></li>
+    					<li><a href="#">家装</a> <span>/</span><a href="#">家居</a> <span>/</span> <a href="#">定制</a></li>
     				</ul>
     			</div>
     		</div>
+    	</div>
+    	<div class="biyaoshuo">
+    		<div class="left"></div>
+    		<div class="right">
+    			<a href="#"> 如果你也有爸妈住在小城，这里有一份“防忽悠指南”</a>
+    			<span>必姐<time>2018-01-04</time></span>
+
+    		</div>
+    	</div>
+    	<div class="news">
+    		<img src="img/index/a1.jpg">
+    		<img src="img/index/a2.jpg">
+    		<img src="img/index/a3.jpg">
+    	</div>
+    	<div class="chosen">
+    		<p>精选</p>
+    		<ul>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx1.jpg">
+    				</a>
+    			</li>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx2.jpg">
+    				</a>
+    			</li>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx3.jpg">
+    				</a>
+    			</li>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx4.jpg">
+    				</a>
+    			</li>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx5.jpg">
+    				</a>
+    			</li>
+    			<li>
+    				<a href="#">
+    					<img src="img/index/jx6.jpg">
+    				</a>
+    			</li>
+    		</ul>
     	</div>
     </div>
     <div class="footer"></div>
