--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>用户登录</title>
 	<script src="/lib/requirejs/require.js" data-main="/js/login"></script>
+	<link rel="stylesheet" type="text/css" href="../css/base.css">
 	<link rel="stylesheet" type="text/css" href="../css/login.css">
 </head>
 <body>
