--- a/src/html/regist.html
+++ b/src/html/regist.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>用户注册</title>
 	<script src="/lib/requirejs/require.js" data-main="/js/regist"></script>
+	<link rel="stylesheet" type="text/css" href="../css/base.css">
 	<link rel="stylesheet" type="text/css" href="../css/regist.css">
 </head>
 <body>
