--- a/src/html/man.html
+++ b/src/html/man.html
@@ -9,7 +9,90 @@
 </head>
 <body>
 	<div class="header"></div>
-	<div class="main"></div>
+	<div class="main">
+		<div class="navs">
+			<a href="/index.html">首页</a>
+			<span>&gt;</span>
+			<span>男装</span>
+		</div>
+		<ul class="lis">
+			<li>男装：</li>
+			<li><a href="#">男士外套</a></li>
+			<li><a href="#">男士上装</a></li>
+			<li><a href="#">男士下装</a></li>
+		</ul>
+		<h2>羽绒/棉服</h2>
+		<ul class="lis_all">
+			<li>
+				<a href="/html/details.html">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i>
+						<img src="../img/man/1.jpg">
+					</i>
+					<dl>
+						<dt>时尚设计感中长款羽绒服</dt>
+						<dd>¥659</dd>
+					</dl>
+				</a>
+			</li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 	<div class="footer"></div>
 </body>
 </html>
