--- a/src/html/details.html
+++ b/src/html/details.html
@@ -29,6 +29,12 @@
 					<li><img src="../img/details/big4.jpg"></li>
 					<li><img src="../img/details/big5.jpg"></li>
 				</ul>
+				<div class="left_bottom">
+					<span>7天无忧退换</span>
+					<span>先行赔付</span>
+					<span>超时赔偿</span>
+					<span>顺丰包邮</span>
+				</div>
 			</div>
 			<div class="right">
 				<div class="top">
@@ -65,10 +71,168 @@
 					<div class="box">
 						<span>数量</span>
 						<div class="num">
-							<span>-</span>
-							<span>1</span>
+							<span style="border-right: 1px solid #e4e3e5;">-</span>
+							<span style="border-right: 1px solid #e4e3e5;">1</span>
 							<span>+</span>
 						</div>
+					</div>
+					<div class="btns">
+						<a href="#" class="whsb buynow">立即购买</a>
+						<a href="/html/cart.html" class="whsb addcart">加入购物车</a>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		<div class="section_view">
+			<div class="top">
+				<a href="#">
+					<span></span>
+					<i>chunfeng-见地服饰</i>
+				</a>
+				<ul>
+					<li class="on">商品信息</li>
+					<li>评价详情 0</li>
+				</ul>
+			</div>
+			<div class="bott">
+				<div class="left">
+					<div class="shop">
+						<div class="shop_logo">
+							<div class="supplier">
+								<em></em>
+								<span>chunfeng-见地服饰</span>
+								<p>中国著名的女装加工企业，服务的高端女装品牌的消费人群包括王菲、贝嫂（维多利亚·贝克汉姆）等国内国外一线大牌明星，并为杨澜女士提供《天下女人》栏目的出席服装。拥有从德国、意大利、日本等国引进的世界先进的生产流水线、自动裁床与激光裁床，工艺精湛，对真丝类、晚装类产品尤其擅长。通过C2M的模式，减少中间不必要的环节，让更多喜欢有设计感的消费者享受到更高性价比的高品质产品。用更为合理的价格用心做美好的产品，是为了让这个世界变得更加美好！</p>
+							</div>
+						</div>
+						<ul>
+							<li>商品质量：<i>4.8</i></li>
+							<li>服务态度：<i>4.9</i></li>
+						</ul>
+					</div>
+					<a href="#" class="shop_into">进店看看</a>
+					<ul class="lists">
+						<li><a href="#">
+							<i><img src="../img/details/left1.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left2.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left3.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left4.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left5.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left6.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left7.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left8.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+						<li><a href="#">
+							<i><img src="../img/details/left9.jpg"></i>
+							<dl>
+								<dt>加厚修身拼皮长裤</dt>
+								<dd>¥ 289</dd>
+							</dl>
+						</a></li>
+					</ul>
+				</div>
+				<div class="right">
+					<div class="tabs">
+						<dl>
+							<dt>品名</dt>
+							<dd>中性复古纯棉磨毛衬衫</dd>
+						</dl>
+						<dl>
+							<dt>款号</dt>
+							<dd>CF181SB21</dd>
+						</dl>
+						<dl>
+							<dt>品牌</dt>
+							<dd>chunfeng</dd>
+						</dl>
+						<dl>
+							<dt>颜色</dt>
+							<dd>花灰色</dd>
+						</dl>
+						<dl>
+							<dt>面料</dt>
+							<dd>100%棉</dd>
+						</dl>
+						<dl>
+							<dt>产地</dt>
+							<dd>广州</dd>
+						</dl>
+						<dl>
+							<dt>规格说明</dt>
+							<dd>此款衬衫版型合身，拍平常码数即可。</dd>
+						</dl>
+						<dl>
+							<dt>洗涤说明</dt>
+							<dd>请温柔呵护，请勿机洗，可轻柔手洗。</dd>
+						</dl>
+					</div>
+					<div class="imgtext">
+						<p><img src="../img/details/1.jpg"></p>
+						<p><img src="../img/details/2.jpg"></p>
+						<p><img src="../img/details/3.jpg"></p>
+						<p><img src="../img/details/4.jpg"></p>
+						<p><img src="../img/details/5.jpg"></p>
+						<p><img src="../img/details/6.jpg"></p>
+						<p><img src="../img/details/7.jpg"></p>
+						<p><img src="../img/details/8.jpg"></p>
+						<p><img src="../img/details/9.jpg"></p>
+						<p><img src="../img/details/10.jpg"></p>
+						<p><img src="../img/details/11.jpg"></p>
+						<p><img src="../img/details/12.jpg"></p>
+						<p><img src="../img/details/13.jpg"></p>
+						<p><img src="../img/details/14.jpg"></p>
+						<p><img src="../img/details/15.jpg"></p>
+						<p><img src="../img/details/16.jpg"></p>
+						<p><img src="../img/details/17.jpg"></p>
+						<p><img src="../img/details/18.jpg"></p>
+						<p><img src="../img/details/19.jpg"></p>
+						<p><img src="../img/details/20.jpg"></p>
 					</div>
 				</div>
 			</div>
