--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
+    <script src="lib/jquery/jquery-1.12.4.min.js"></script>
     <script src="lib/requirejs/require.js" data-main="js/index"></script>
     <link rel="stylesheet" type="text/css" href="../css/base.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -46,6 +47,50 @@
     					<li><a href="#">家装</a> <span>/</span><a href="#">家居</a> <span>/</span> <a href="#">定制</a></li>
     				</ul>
     			</div>
+                <div class="right">
+                    <ul id="lbt">
+                        <li>
+                            <a href="#">
+                                <img src="img/index/1.jpg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/index/2.jpg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/index/3.jpg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/index/4.jpg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/index/5.jpg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/index/6.jpg">
+                            </a>
+                        </li>
+                    </ul>
+                    <ul id="porlter">
+                        <li class="cur"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <span class="slide" id="porv"><img src="img/index/slider-left.png"></span>
+                    <span class="slide" id="next"><img src="img/index/slider-right.png"></span>
+                </div>
     		</div>
     	</div>
     	<div class="biyaoshuo">
