--- a/src/index.html
+++ b/src/index.html
@@ -26,18 +26,7 @@
     		<div class="connt">
     			<div class="left">
     				<ul>
-    					<li>
-    						<a href="/html/man.html">男装</a> <span>/</span> <a href="#">女装</a>
-    						<!-- <div class="box">
-    							<ul>
-    								<span>男士外套</span>
-    								<span>&gt;</span>
-    								<li>羽绒/棉服</li>
-    								<li>风衣/大衣</li>
-    								<li>皮衣/夹克</li>
-    							</ul>
-    						</div> -->
-    					</li>
+    					<li><a href="/html/man.html">男装</a> <span>/</span> <a href="#">女装</a></li>
     					<li><a href="#">眼镜</a> <span>/</span> <a href="#">配饰</a> <span>/</span> <a href="#">数码</a></li>
     					<li><a href="#">鞋靴</a> <span>/</span> <a href="#">运动</a></li>
     					<li><a href="#">皮具</a> <span>/</span> <a href="#">出行</a></li>
@@ -109,8 +98,8 @@
     	<!-- 精选 -->
     	<div class="chosen">
     		<p>精选</p>
-    		<ul>
-    			<li>
+    		<ul id="sfq">
+    			<li class="onmaxW">
     				<a href="#">
     					<img src="img/index/jx1.jpg">
     				</a>
@@ -1394,8 +1383,36 @@
     			</dl>
     		</div>
     	</li>
-    	<li><a href="#"></a></li>
+    	<li><a href="javascript:void(0)" id="toTop"></a></li>
     </ul>
+    <div class="fidx_top">
+        <div class="conts">
+            <div class="nav_chage">
+                <div class="p_c">
+                    <span>全部分类</span>
+                    <i><img src="img/index/categoryDown.png"></i>
+                    <div class="left">
+                        <ul>
+                            <li><a href="/html/man.html">男装</a> <span>/</span> <a href="#">女装</a></li>
+                            <li><a href="#">眼镜</a> <span>/</span> <a href="#">配饰</a> <span>/</span> <a href="#">数码</a></li>
+                            <li><a href="#">鞋靴</a> <span>/</span> <a href="#">运动</a></li>
+                            <li><a href="#">皮具</a> <span>/</span> <a href="#">出行</a></li>
+                            <li><a href="#">居家</a> <span>/</span> <a href="#">婴童</a></li>
+                            <li><a href="#">美妆</a> <span>/</span> <a href="#">个护</a></li>
+                            <li><a href="#">厨具</a> <span>/</span> <a href="#">家电</a> <span>/</span> <a href="#">汽配</a></li>
+                            <li><a href="#">家装</a> <span>/</span><a href="#">家居</a> <span>/</span> <a href="#">定制</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="search">
+                    <form>
+                        <input type="text" placeholder="请输入要搜索的商品" class="text">
+                        <button></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
