--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -23,7 +23,7 @@
 			<h3>购物车</h3>
 			<div class="tatle">
 				<p class="p_l">
-					<span><i></i>全选</span>
+					<span><input type="checkbox" checked="checked" name="" class="ckd">全选</span>
 					<span>商品信息</span>
 				</p>
 				<p class="p_r">
@@ -33,10 +33,14 @@
 					<span>操作</span>
 				</p>
 			</div>
-			<div class="cart_body"></div>
+			<div class="cart_body">
+				<table>
+					
+				</table>
+			</div>
 			<div class="bot">
 				<p class="p_l">
-					<span><i></i>全选</span>
+					<span><input type="checkbox" checked="checked" name="" class="ckd">全选</span>
 					<span><a href="javascript:void(0)">删除</a></span>
 				</p>
 				<p class="p_r">
