--- a/src/html/regist.html
+++ b/src/html/regist.html
@@ -23,7 +23,7 @@
 				<span class="tip" id="pwd_tip"></span><br>
 				<input type="password" placeholder="请再次输入登录密码" class="text" id="repwd" >
 				<span class="tip" id="repwd_tip"></span><br>
-				<label><input type="checkbox" name="" class="check">我已阅读并同意</label>
+				<label id="chek"><input type="checkbox" name="" checked class="check">我已阅读并同意</label>
 				<a href="#">《必要服务协议》</a><br>
 				<span id="tip_2"></span>
 				<input type="submit" value="注册" id="btn" >
