--- a/src/html/details.html
+++ b/src/html/details.html
@@ -5,6 +5,7 @@
 	<title>详情</title>
 	<script src="/lib/jquery/jquery-1.12.4.min.js"></script>
 	<script src="/lib/jquery_plugins/jquery.elevateZoom-3.0.8.min.js"></script>
+	<script src="/lib/jquery_plugins/jquery.cookie.js"></script>
 	<script src="/lib/requirejs/require.js" data-main="/js/details"></script>
 	<link rel="stylesheet" type="text/css" href="../css/base.css">
 	<link rel="stylesheet" type="text/css" href="../css/details.css">
@@ -17,7 +18,7 @@
 			<span>&gt;</span>
 			<a href="/html/man.html">男装</a>
 			<span>&gt;</span>
-			<span>中性复古纯棉磨毛衬衫</span>
+			<span id="dt_1"></span>
 		</div>
 		<div class="connt">
 			<div class="left">
@@ -25,11 +26,7 @@
 					<img src="../img/details/big1.jpg" id="imag">
 				</div>
 				<ul id="imags">
-					<li><img src="../img/details/big1.jpg"></li>
-					<li><img src="../img/details/big2.jpg"></li>
-					<li><img src="../img/details/big3.jpg"></li>
-					<li><img src="../img/details/big4.jpg"></li>
-					<li><img src="../img/details/big5.jpg"></li>
+					
 				</ul>
 				<div class="left_bottom">
 					<span>7天无忧退换</span>
@@ -40,27 +37,28 @@
 			</div>
 			<div class="right">
 				<div class="top">
-					<h3>中性复古品质纯棉磨毛衬衫-男朋友</h3>
+					<b id="dt_id">1</b>
+					<h3 id="details_name"></h3>
 					<p>我要光明正大地，穿上你的衣服。</p>
 				</div>
 				<div class="paln">
 					<div class="box">
 						<span>售价</span>
 						<div>
-							<span class="ccl">¥<i>339</i></span>
+							<span class="ccl">¥<i id="details_price"></i></span>
 							<span>生产周期：7天</span>
 						</div>
 					</div>
 					<div class="box">
 						<span>颜色</span>
-						<ul>
-							<li>花灰色<em></em></li>
+						<ul id="details_color">
+							
 						</ul>
 					</div>
 					<div class="box">
 						<span>尺寸</span>
-						<ul>
-							<li>XS<em></em></li>
+						<ul id="sizes">
+							<li class="nocheck">XS<em></em></li>
 							<li class="nocheck">S<em></em></li>
 							<li class="nocheck">M<em></em></li>
 							<li class="nocheck">L<em></em></li>
@@ -73,9 +71,9 @@
 					<div class="box">
 						<span>数量</span>
 						<div class="num">
-							<span style="border-right: 1px solid #e4e3e5;">-</span>
-							<span style="border-right: 1px solid #e4e3e5;">1</span>
-							<span>+</span>
+							<span id="minus" style="border-right: 1px solid #e4e3e5;">-</span>
+							<span id="nums" style="border-right: 1px solid #e4e3e5;">1</span>
+							<span id="adds">+</span>
 						</div>
 					</div>
 					<div class="btns">
