--- a/src/html/login.html
+++ b/src/html/login.html
@@ -19,7 +19,7 @@
 				<label id="redmd"><input type="checkbox" name="" class="check">记住密码</label>
 				<a href="#">忘记密码</a><br>
 				<span id="tip_2"></span>
-				<input type="submit" value="登录" id="btn" >
+				<input type="button" value="登录" id="btn" >
 			</form>
 			<div class="more">
 				<span>使用第三方账号登录：</span>
