--- a/src/index.html
+++ b/src/index.html
@@ -26,45 +26,45 @@
     		<div class="connt">
     			<div class="left">
     				<ul>
-    					<li><a href="/html/man.html">男装</a> <span>/</span> <a href="#">女装</a></li>
-    					<li><a href="#">眼镜</a> <span>/</span> <a href="#">配饰</a> <span>/</span> <a href="#">数码</a></li>
-    					<li><a href="#">鞋靴</a> <span>/</span> <a href="#">运动</a></li>
-    					<li><a href="#">皮具</a> <span>/</span> <a href="#">出行</a></li>
-    					<li><a href="#">居家</a> <span>/</span> <a href="#">婴童</a></li>
-    					<li><a href="#">美妆</a> <span>/</span> <a href="#">个护</a></li>
-    					<li><a href="#">厨具</a> <span>/</span> <a href="#">家电</a> <span>/</span> <a href="#">汽配</a></li>
-    					<li><a href="#">家装</a> <span>/</span><a href="#">家居</a> <span>/</span> <a href="#">定制</a></li>
+    					<li><a href="/html/man.html">男装</a> <span>/</span> <a href="/html/man.html">女装</a></li>
+    					<li><a href="/html/man.html">眼镜</a> <span>/</span> <a href="/html/man.html">配饰</a> <span>/</span> <a href="/html/man.html">数码</a></li>
+    					<li><a href="/html/man.html">鞋靴</a> <span>/</span> <a href="/html/man.html">运动</a></li>
+    					<li><a href="/html/man.html">皮具</a> <span>/</span> <a href="/html/man.html">出行</a></li>
+    					<li><a href="/html/man.html">居家</a> <span>/</span> <a href="/html/man.html">婴童</a></li>
+    					<li><a href="/html/man.html">美妆</a> <span>/</span> <a href="/html/man.html">个护</a></li>
+    					<li><a href="/html/man.html">厨具</a> <span>/</span> <a href="/html/man.html">家电</a> <span>/</span> <a href="/html/man.html">汽配</a></li>
+    					<li><a href="/html/man.html">家装</a> <span>/</span><a href="/html/man.html">家居</a> <span>/</span> <a href="/html/man.html">定制</a></li>
     				</ul>
     			</div>
                 <div class="right">
                     <ul id="lbt">
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/1.jpg">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/2.jpg">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/3.jpg">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/4.jpg">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/5.jpg">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/html/man.html">
                                 <img src="img/index/6.jpg">
                             </a>
                         </li>
